# Marauder

./: .bandit  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: crypto_rationale.md  vault_format.md
src/marauder/: __init__.py  models.py
src/marauder/crypto/: __init__.py  encryption.py  key_derivation.py  memory.py  random.py
src/marauder/services/: __init__.py  auth_service.py  session_service.py  vault_service.py
src/marauder/vault/: __init__.py  exporter.py  format.py  repository.py
tests/: __init__.py
tests/crypto/: __init__.py  test_encryption.py  test_key_derivation.py  test_memory.py  test_random.py
tests/services/: __init__.py  test_auth_service.py  test_session_service.py  test_vault_service.py
tests/vault/: __init__.py  test_exporter.py  test_format.py  test_repository.py
